docker-2048/k8s_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: game
  labels:
    app: game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: docker.io/agutierrc/2048_game:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
