docker-2048/k8s_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: game-service
    namespace: game
spec:
    selector:
      app: game
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
