docker-2048/k8s_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game
  namespace: game
  labels:
    app: game
spec:
  rules:
  - host: game.bar
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: game-service
            port:
              number: 80
